fix: z-index of the save to keyboard button (#1692)

--- a/packages/uhk-web/src/app/app.component.scss
+++ b/packages/uhk-web/src/app/app.component.scss
@@ -19,6 +19,7 @@ app-update-available {
     position: fixed;
     bottom: 15px;
     right: 15px;
+    z-index: 25;
 }
 
 .inner-content {
